# CHU-Information-Management-System

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
src/: main.cpp
